--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.4.0",
     "axios": "^1.7.7",
     "flowbite": "^2.5.2",
     "jwt-decode": "^4.0.0",
