--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "flowbite": "^2.5.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.460.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
     "redux": "^5.0.1"
   },
