--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.4.0",
     "axios": "^1.7.7",
     "flowbite": "^2.5.2",
+    "immer": "^10.1.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.460.0",
     "prop-types": "^15.8.1",
@@ -20,7 +21,8 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "use-immer": "^0.10.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
